tests/machine/x/cobol/slice.error
cobc: exit status 1
/workspace/mochi/tests/machine/x/cobol/slice.cob:11: error: syntax error, unexpected (

