tests/machine/x/cobol/slice.cob
*> Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
>>SOURCE FORMAT FREE
       IDENTIFICATION DIVISION.
       PROGRAM-ID. SLICE.
       DATA DIVISION.
       WORKING-STORAGE SECTION.
       01 TMP PIC 9(9) VALUE 0.
       PROCEDURE DIVISION.
       DISPLAY 2 3
       DISPLAY 1 2
       DISPLAY "hello"((1 + 1):(4 - 1))
       STOP RUN.
